--- a/component-library/components/left-right/left-right.scss
+++ b/component-library/components/left-right/left-right.scss
@@ -30,12 +30,11 @@
   &__wrapper {
     position: relative;
     z-index: 10;
-    max-width: 120rem;
+    max-width: $max-width-xxl;
     margin: 90px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     gap: 1rem;
 
     @media only screen and (min-width: 1020px) {
@@ -51,9 +50,10 @@
   }
 
   &__img {
-    max-width: 620px;
+    margin-top: 32px;
 
     @media only screen and (min-width: 1020px) {
+      max-width: 50%;
       translate: 42px 24px;
     }
   }
@@ -79,7 +79,6 @@
     font-weight: lighter;
     overflow-wrap: break-word;
     max-width: 870px;
-    margin-inline: auto;
     margin-bottom: 60px;
     line-height: 1.7rem;
     letter-spacing: 1px;
