--- a/component-library/shared/styles/_variables.scss
+++ b/component-library/shared/styles/_variables.scss
@@ -35,7 +35,7 @@ $color-background-effects: #faaa8f;
 $color-header: #000;
 $color-header-light: mix($color-anchor, $color-white, 4%);
 $color-header-dark: mix($color-anchor, $color-white, 12%);
-$color-text: #282828;
+$color-text: #181512;
 $color-deactive: #ababab;
 $color-text-dark: #dddddd;
 $color-text-light: #4d4d4d;
@@ -44,9 +44,19 @@ $color-text-light: #4d4d4d;
 $base-padding: 1rem;
 $base-margin: 1rem;
 
+// Page Container Variables
+$max-width-xs: 620px;
+$max-width-sm: 780px;
+$max-width-md: 870px;
+$max-width-lg: 1028px;
+$max-width-xl: 1280px;
+$max-width-xxl: 1920px;
+
 // Transition Variables
 $base-transition: all 0.5s ease-in-out;
 
-//Others Varibles
+//Other Variables
 $base-border-width: 1px;
 $base-border-radius: 8px;
+
+
