--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -5,10 +5,10 @@
     display: flex;
     justify-content: space-between;
     padding: $base-padding;
-    max-width: 120rem;
+    max-width: $max-width-xxl;
     margin: 0 auto;
 
-    @media screen and (min-width: $page-max-width) {
+    @media screen and (min-width: $max-width-xl) {
       padding: 64px 157px;
     }
   }
@@ -27,7 +27,7 @@
   &__nav-list {
     display: none;
 
-    @media screen and (min-width: $page-max-width) {
+    @media screen and (min-width: $max-width-xl) {
       position: static;
       display: flex;
       padding: 0;
@@ -73,7 +73,7 @@
       margin-bottom: .5rem;
     }
 
-    @media screen and (min-width: $page-max-width) {
+    @media screen and (min-width: $max-width-xl) {
       display: none !important;
     }
   }
@@ -83,7 +83,7 @@
     border: none;
     background: none;
 
-    @media screen and (min-width: $page-max-width) {
+    @media screen and (min-width: $max-width-xl) {
       display: none;
     }
   }
